--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,14 +6,38 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
+  <!doctype html>
+  <html lang="en">
 
-  <title>Toko Online</title>
-</head>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+      body {
+        background-image: url('../img/online.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+      }
+    </style>
+    <title>ToSeMol</title>
+  </head>
 
 <body>
   <nav>
-    <div>
-      <h4>Toko Online</h4>
+    <div class="logo">
+      <h4>ToSeMol</h4>
     </div>
     <ul>
       <li><a href="/">Home</a></li>
@@ -24,8 +48,9 @@
       <li><a href="/user/logOut">Log Out</a></li>
     </ul>
   </nav>
-
-
-</body>
-
-</html>
+  <% if(alert.msg){ %>
+  <div class="alert alert-<%= alert.type %>" role="alert">
+    <%= alert.msg %>
+  </div>
+  <% } %>
+  <%- include('./partial/footer') %>
