--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
 nav{
   display: flex;
   justify-content: space-around;
-  background-color: #18addd;
+  background-color: #2B575E;
   color: white;
   height: 60px;
   align-items: center;
